# predictive-health-resources

./: .gitignore  README.md
.streamlit/: config.toml  secrets.example.toml
api/: README.md  categorify.py  main.py  pyproject.toml
app/: 0_🏠_home.py  README.md  home.py  requirements.txt
app/pages/: 1_📶_analysis.py  2_🔎_prediction.py  3_📞_contact.py  analysis.py  contact.py  prediction.py
app/utils/: bigquery.py  functions.py  queries.py  sidebar.html  sidebar.py
docs/: informe_avance_week3.md  informe_avance_week3_.md  plan_week1.md  project.md  sprint_planning_week2.md  sprint_planning_week3.md  sprint_week3.md
models/: README.md  credentials_example.json  model_dev.ipynb  pyproject.toml
models/outputs/: model.pkl
notebooks/: 01_data_clean_aggregate.ipynb  02_agg_file.ipynb  EDA.ipynb  README.md  pyproject.toml  requirements.txt
src/: README.md  bigquery_guide.py  clean_lat_lon.py  extract.py  olap_model.py  pyproject.toml  requirements.txt  transform.py  transform_pandas.py  variables.py  weather_extract.py
