[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastexcel>=0.16.0",
    "google-cloud-bigquery>=3.38.0",
    "lxml>=6.0.2",
    "openmeteo-requests>=1.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "tqdm>=4.67.1",
]
